@@ -21,49 +21,112 @@ header:
 
 # Vector API Practical Performance Guide in Java
 
-Vector API enables explicit SIMD-style operations for numeric code paths.
-It is useful where scalar loops are CPU-bound and data layout is vector-friendly.
+The Vector API enables explicit SIMD-style operations in Java for numeric hot paths.
+Use it only where CPU profiling shows scalar loops are a bottleneck.
 
 ---
 
-## Best-Fit Scenarios
+## Good Candidates for Vectorization
 
-- analytics pre-processing
-- signal/image transformation
-- risk/scoring engines with batch arithmetic
+- arithmetic-heavy loops over primitive arrays
+- scoring/risk calculations on large batches
+- data transforms with low branch complexity
+
+Poor candidates:
+
+- pointer-heavy object graphs
+- branch-heavy logic with divergent execution
+- tiny loops where vector setup overhead dominates
 
 ---
 
-## Usage Pattern
+## Baseline Problem
+
+Assume a hot path computes:
+
+`out[i] = inA[i] * factor + inB[i]`
+
+Scalar code is simple, but may leave CPU SIMD capacity unused.
+
+---
+
+## Vectorized Implementation Shape
 
 ```java
-// Incubator module usage shape:
-// --add-modules jdk.incubator.vector
-// VectorSpecies<Float> species = FloatVector.SPECIES_PREFERRED;
+import jdk.incubator.vector.FloatVector;
+import jdk.incubator.vector.VectorMask;
+import jdk.incubator.vector.VectorSpecies;
+
+public final class Blend {
+
+    private static final VectorSpecies<Float> SPECIES = FloatVector.SPECIES_PREFERRED;
+
+    public static void blend(float[] inA, float[] inB, float factor, float[] out) {
+        int len = out.length;
+        int i = 0;
+
+        FloatVector vf = FloatVector.broadcast(SPECIES, factor);
+
+        for (; i + SPECIES.length() <= len; i += SPECIES.length()) {
+            FloatVector a = FloatVector.fromArray(SPECIES, inA, i);
+            FloatVector b = FloatVector.fromArray(SPECIES, inB, i);
+            a.mul(vf).add(b).intoArray(out, i);
+        }
+
+        // Tail elements not fitting full vector width.
+        if (i < len) {
+            VectorMask<Float> mask = SPECIES.indexInRange(i, len);
+            FloatVector a = FloatVector.fromArray(SPECIES, inA, i, mask);
+            FloatVector b = FloatVector.fromArray(SPECIES, inB, i, mask);
+            a.mul(vf).add(b).intoArray(out, i, mask);
+        }
+    }
+}
 ```
 
----
-
-## Performance Conditions
-
-- contiguous primitive arrays
-- minimal branching in inner loops
-- work large enough to amortize setup
-- avoid boxing and object indirection
+Always handle tail elements correctly.
 
 ---
 
-## Engineering Advice
+## Correctness Strategy
 
-- benchmark scalar vs vector versions with JMH.
-- keep fallback scalar path for portability.
-- verify correctness with randomized differential tests.
-- inspect CPU utilization and branch behavior in profilers.
+Before measuring speedups, prove output equivalence.
+
+- keep scalar reference implementation
+- run randomized differential tests (`scalar == vector` within epsilon)
+- test edge cases: empty arrays, non-multiple lengths, negative values, NaN/Infinity
+
+Vector speedups are useless if numeric semantics drift.
+
+---
+
+## Dry Run: Optimization Rollout
+
+1. profile shows blend loop consumes 32% CPU.
+2. implement vector version behind feature flag.
+3. run correctness test suite against scalar baseline.
+4. benchmark with JMH on representative sizes.
+5. enable for 10% traffic, compare p95 CPU/request.
+6. roll to 100% if stable; keep scalar fallback path.
+
+This avoids risky all-at-once performance changes.
+
+---
+
+## Benchmarking Checklist (JMH)
+
+- warmup and measurement iterations sufficient for JIT stabilization
+- input data randomized but reproducible
+- test multiple batch sizes (small, medium, large)
+- compare throughput and p99 latency
+- run on target deployment CPU family
+
+Do not extrapolate laptop benchmark gains directly to production.
 
 ---
 
 ## Key Takeaways
 
-- Vector API is for targeted hot paths, not generic application code.
-- data layout and branch predictability drive benefits.
-- always validate performance claims with repeatable benchmarks.
+- Vector API is a targeted optimization tool for numeric hotspots.
+- real gains depend on data layout, loop shape, and branch behavior.
+- require correctness parity and reproducible benchmarks before rollout.
